--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "whop-app",
+  "name": "brand-safe-content-approval",
   "version": "1.0.0",
-  "description": "A Whop app for brand safe content rewards",
+  "description": "A comprehensive Whop app for brand-safe content approval and CPM-based rewards",
   "private": true,
   "type": "module",
+  "keywords": ["whop", "brand-safety", "content-moderation", "cpm", "rewards", "approval"],
+  "author": "Your Name",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "deploy": "npm run build && npm run preview"
   },
   "dependencies": {
     "@whop-apps/sdk": "^0.0.1-canary.117",
