Update app to match Content Rewards pattern
- Changed app name to 'Content Rewards'
- Updated navigation and UI text
- Modified rewards system to be more community-focused
- Aligned with Whop's Content Rewards app structure
- Updated package.json and component titles

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "brand-safe-content-approval",
+  "name": "content-rewards",
   "version": "1.0.0",
-  "description": "A comprehensive Whop app for brand-safe content approval and CPM-based rewards",
+  "description": "Content Rewards - A comprehensive Whop app for brand-safe content approval and CPM-based rewards",
   "private": true,
   "type": "module",
   "keywords": ["whop", "brand-safety", "content-moderation", "cpm", "rewards", "approval"],
