feat(youtube): add secure serverless meta endpoint and client validation + preview

--- a/env.example
+++ b/env.example
@@ -15,3 +15,9 @@ WHOP_APP_BASE_URL=http://localhost:3000
 
 # Optional: OpenAI API Key for content moderation (if you want AI-powered brand safety)
 OPENAI_API_KEY=your_openai_api_key_here
+
+# YouTube API Key for video validation and view tracking
+VITE_YOUTUBE_API_KEY=your_youtube_api_key_here
+
+# Server-only (Vercel) YouTube API Key for secure requests
+YOUTUBE_API_KEY=your_youtube_api_key_here
