Add Supabase database integration with Vercel API routes
- Add PostgreSQL database connection utility
- Create API routes for users, content-rewards, submissions, analytics
- Install pg dependency for PostgreSQL connection
- Update env.example with DATABASE_URL
- Remove unnecessary database schema files (MySQL, SQLite, setup docs)
- Clean up project structure for Supabase + Vercel deployment

--- a/env.example
+++ b/env.example
@@ -21,3 +21,6 @@ VITE_YOUTUBE_API_KEY=your_youtube_api_key_here
 
 # Server-only (Vercel) YouTube API Key for secure requests
 YOUTUBE_API_KEY=your_youtube_api_key_here
+
+# Database connection (Supabase PostgreSQL)
+DATABASE_URL=postgresql://postgres:[password]@[host]:5432/postgres
