--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "deploy": "npm run build && npm run preview"
   },
   "dependencies": {
+    "@types/pg": "^8.15.5",
     "@whop-apps/sdk": "^0.0.1-canary.117",
     "clsx": "^2.0.0",
     "googleapis": "^164.0.0",
     "lucide-react": "^0.263.1",
+    "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
