Configure app for Whop platform deployment
- Update Vercel configuration for Whop app requirements
- Add proper headers for Whop iframe embedding
- Configure Content Security Policy for Whop domains
- Set Node.js 18.x runtime for API functions
- Create comprehensive Whop app setup guide
- Document Whop dashboard configuration steps
- Add permission requirements and app URLs
- Include community owner and member workflows
- Provide deployment checklist for Whop app store

Ready for Whop app store submission! 🚀

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,27 @@
   "outputDirectory": "dist",
   "rewrites": [
     { "source": "/((?!api).*)", "destination": "/index.html" }
-  ]
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Frame-Options",
+          "value": "SAMEORIGIN"
+        },
+        {
+          "key": "Content-Security-Policy",
+          "value": "frame-ancestors 'self' https://whop.com https://*.whop.com"
+        }
+      ]
+    }
+  ],
+  "functions": {
+    "api/*.ts": {
+      "runtime": "nodejs18.x"
+    }
+  }
 }
 
 
