--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "type-check": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
-    "deploy": "npm run build && npm run preview"
+    "deploy": "npm run build && npm run preview",
+    "init-db": "node scripts/init-db.js",
+    "setup": "npm install && npm run init-db"
   },
   "dependencies": {
     "@types/pg": "^8.15.5",
