--- a/env.example
+++ b/env.example
@@ -1,26 +1,27 @@
 # Whop App Environment Variables
 # Copy these to .env.local and fill in your actual values from Whop Dashboard
 
-# Your Whop App ID (from Whop Dashboard > Developer > Apps > Your App)
+# Whop App Configuration (Frontend - Vite)
+VITE_WHOP_APP_ID=your_app_id_here
+VITE_WHOP_APP_SECRET=your_app_secret_here
+VITE_WHOP_APP_ENV=development
+VITE_WHOP_APP_BASE_URL=http://localhost:3000
+
+# Whop App Configuration (Backend - Vercel)
 WHOP_APP_ID=your_app_id_here
-
-# Your Whop App Secret (from Whop Dashboard > Developer > Apps > Your App)
 WHOP_APP_SECRET=your_app_secret_here
-
-# Your Whop App Environment (development or production)
 WHOP_APP_ENV=development
-
-# Your Whop App Base URL (for development: http://localhost:3000, for production: your Vercel domain)
 WHOP_APP_BASE_URL=http://localhost:3000
-
-# Optional: OpenAI API Key for content moderation (if you want AI-powered brand safety)
-OPENAI_API_KEY=your_openai_api_key_here
-
-# YouTube API Key for video validation and view tracking
-VITE_YOUTUBE_API_KEY=your_youtube_api_key_here
-
-# Server-only (Vercel) YouTube API Key for secure requests
-YOUTUBE_API_KEY=your_youtube_api_key_here
 
 # Database connection (Supabase PostgreSQL)
 DATABASE_URL=postgresql://postgres:[password]@[host]:5432/postgres
+
+# YouTube API Keys
+VITE_YOUTUBE_API_KEY=your_youtube_api_key_here
+YOUTUBE_API_KEY=your_youtube_api_key_here
+
+# Optional: OpenAI API Key for content moderation
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Node Environment
+NODE_ENV=development
