--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "setup": "npm install && npm run init-db"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.76.1",
     "@types/pg": "^8.15.5",
     "@whop-apps/sdk": "^0.0.1-canary.117",
     "clsx": "^2.0.0",
+    "dotenv": "^17.2.3",
     "googleapis": "^164.0.0",
     "lucide-react": "^0.263.1",
     "pg": "^8.16.3",
