--- a/vercel.json
+++ b/vercel.json
@@ -40,5 +40,10 @@
   ],
   "env": {
     "NODE_ENV": "production"
+  },
+  "functions": {
+    "api/**/*.ts": {
+      "runtime": "nodejs18.x"
+    }
   }
 }
