Force Vercel cache clear and fresh build
- Updated package.json version to 1.0.1 to force cache invalidation
- Modified build script to remove dist directory before building
- Added .vercel-cache-bust file to force Vercel to use latest commit
- Enhanced .vercelignore to ignore all possible cache directories
- This should force Vercel to use commit 9dbb8f8 instead of cached 7132037
- Removes all middleware references and enables debugging logs

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,5 +1,9 @@
-# Ignore build cache to force fresh builds
+# Force fresh builds - ignore all cache
 .vercel
 node_modules
 dist
 *.log
+.cache
+.vite
+.next
+.turbo
