--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.76.1",
     "@types/pg": "^8.15.5",
-    "@whop-apps/sdk": "^0.0.1-canary.117",
+    "@whop/api": "^1.0.0",
+    "@whop/iframe": "^1.0.0",
     "clsx": "^2.0.0",
     "dotenv": "^17.2.3",
     "googleapis": "^164.0.0",
