feat: Update Whop SDK to modern implementation with @whop/api and @whop/iframe
- Replace outdated @whop-apps/sdk with official @whop/api and @whop/iframe packages
- Update WhopSDK implementation to use modern Whop SDK standards
- Fix environment variable handling for Vite compatibility
- Update package.json with correct Whop SDK versions
- Simplify HTML script to use modern SDK initialization
- Update environment variables example for modern Whop SDK
- Fix all linting errors and ensure successful build
- Maintain backward compatibility with fallback mode
- Improve error handling and logging for better debugging

--- a/env.example
+++ b/env.example
@@ -1,17 +1,17 @@
 # Whop App Environment Variables
 # Copy these to .env.local and fill in your actual values from Whop Dashboard
 
-# Whop App Configuration (Frontend - Vite)
+# Modern Whop SDK Configuration (Frontend - Vite)
 VITE_WHOP_APP_ID=your_app_id_here
-VITE_WHOP_APP_SECRET=your_app_secret_here
-VITE_WHOP_APP_ENV=development
-VITE_WHOP_APP_BASE_URL=http://localhost:3000
+VITE_WHOP_API_KEY=your_api_key_here
+VITE_WHOP_AGENT_USER_ID=your_agent_user_id_here
+VITE_WHOP_COMPANY_ID=your_company_id_here
 
-# Whop App Configuration (Backend - Vercel)
+# Modern Whop SDK Configuration (Backend - Vercel)
 WHOP_APP_ID=your_app_id_here
-WHOP_APP_SECRET=your_app_secret_here
-WHOP_APP_ENV=development
-WHOP_APP_BASE_URL=http://localhost:3000
+WHOP_API_KEY=your_api_key_here
+WHOP_AGENT_USER_ID=your_agent_user_id_here
+WHOP_COMPANY_ID=your_company_id_here
 
 # Database connection (Supabase PostgreSQL)
 DATABASE_URL=postgresql://postgres:[password]@[host]:5432/postgres
