--- a/vercel.json
+++ b/vercel.json
@@ -25,7 +25,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "frame-ancestors 'self' https://whop.com https://*.whop.com"
+          "value": "default-src 'self'; script-src 'self' 'unsafe-eval' https://whop.com https://*.whop.com; style-src 'self' 'unsafe-inline' https://whop.com https://*.whop.com; img-src 'self' data: https: blob:; font-src 'self' data: https:; connect-src 'self' https://api.whop.com https://*.whop.com https://segapi.whop.com; frame-ancestors 'self' https://whop.com https://*.whop.com; frame-src 'self' https://whop.com https://*.whop.com"
         }
       ]
     }
