--- a/vercel.json
+++ b/vercel.json
@@ -24,6 +24,10 @@
           "value": "SAMEORIGIN"
         },
         {
+          "key": "Permissions-Policy",
+          "value": "camera=(), microphone=(), geolocation=(), payment=(), usb=(), magnetometer=(), gyroscope=(), accelerometer=(), ambient-light-sensor=(), autoplay=(), encrypted-media=(), fullscreen=(self), picture-in-picture=(), sync-xhr=(), midi=(), speaker=(), vibrate=(), idle-detection=(), keyboard-map=()"
+        },
+        {
           "key": "Content-Security-Policy",
           "value": "default-src 'self'; script-src 'self' 'unsafe-eval' https://whop.com https://*.whop.com; style-src 'self' 'unsafe-inline' https://whop.com https://*.whop.com; img-src 'self' data: https: blob:; font-src 'self' data: https:; connect-src 'self' https://api.whop.com https://*.whop.com https://segapi.whop.com; frame-ancestors 'self' https://whop.com https://*.whop.com; frame-src 'self' https://whop.com https://*.whop.com"
         }
