Fix Whop SDK initialization and improve fallback mechanisms
- Remove server SDK initialization in browser environment
- Start SDK in fallback mode by default for better reliability
- Always set fallback data to ensure app works
- Improve error handling for SDK initialization failures
- Remove unused WhopServerSdk import
- Clean up Permissions Policy warnings for unrecognized features

This resolves the 'Class extends value undefined' error and ensures
the app loads reliably even when Whop SDK fails to initialize.

--- a/vercel.json
+++ b/vercel.json
@@ -25,7 +25,7 @@
         },
         {
           "key": "Permissions-Policy",
-          "value": "camera=(), microphone=(), geolocation=(), payment=(), usb=(), magnetometer=(), gyroscope=(), accelerometer=(), ambient-light-sensor=(), autoplay=(), encrypted-media=(), fullscreen=(self), picture-in-picture=(), sync-xhr=(), midi=(), speaker=(), vibrate=(), idle-detection=(), keyboard-map=()"
+          "value": "camera=(), microphone=(), geolocation=(), payment=(), usb=(), magnetometer=(), gyroscope=(), accelerometer=(), autoplay=(), encrypted-media=(), fullscreen=(self), picture-in-picture=(), sync-xhr=(), midi=(), idle-detection=(), keyboard-map=()"
         },
         {
           "key": "Content-Security-Policy",
