--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@supabase/supabase-js": "^2.76.1",
     "@types/pg": "^8.15.5",
     "@whop/api": "^0.0.51",
+    "@whop/frosted-ui": "^0.0.1-canary.24",
     "@whop/iframe": "^0.0.3",
     "clsx": "^2.0.0",
     "dotenv": "^17.2.3",
